<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sucle</string>
    <string name="title_post_detail">Post Detail</string>
    <string name="app_id">170038059858161</string>
    <string name="google_api_key">AIzaSyDWxuiSZF-3uZR-afHLI8hmRfS-VHS2_xI</string>
    <string name="login_title">Login</string>

    <integer-array name="error_codes">
        <item>400</item>
        <item>401</item>
        <item>402</item>
        <item>403</item>
        <item>404</item>
        <item>405</item>
        <item>406</item>
        <item>407</item>
        <item>500</item>
        <item>501</item>
        <item>502</item>
        <item>503</item>
        <item>504</item>
    </integer-array>

    <string-array name="error_messages">
        <item>Token has expired or doesn\'t exist</item>
        <item>One or more parameters are invalid</item>
        <item>There was a problem during the file transfer</item>
        <item>File too big</item>
        <item>The format is not permitted</item>
        <item>The message is empty</item>
        <item>The message is too long</item>
        <item>Unknown social network</item>
        <item>Cannot connect to the database</item>
        <item>There was a problem during the user creation</item>
        <item>There was a problem during the device creation</item>
        <item>There was a problem during the social creation</item>
        <item>There was a problem during the file creation</item>
    </string-array>

    <string-array name="radius_tilte">
        <item>50m</item>
        <item>100m</item>
        <item>250m</item>
        <item>1km</item>
        <item>10km</item>
        <item>100km</item>
    </string-array>

    <integer-array name="radius_values">
        <item>50</item>
        <item>100</item>
        <item>250</item>
        <item>1000</item>
        <item>10000</item>
        <item>100000</item>
    </integer-array>

    <string name="error_internet_request">Cannot connect to the server</string>
    <string name="sending_message">Sending message in progress</string>
    <string name="message_task_notification_title">Sucle</string>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="action_map">Map</string>
    <string name="new_message">New message</string>
    <string name="title_activity_new_message">NewMessageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="post_message">Post message</string>
    <string name="attach_file">Attach file</string>
	<string name="not_yet_located">You can\'t send messages for the moment, as we don\'t yet know where you are.</string>
	<string name="photo">Photo</string>
	<string name="video">Video</string>
	<string name="audio">Audio</string>
	<string name="take_photo">Take a photo</string>
	<string name="capture_video">Capture a movie</string>
	<string name="add_comment">Add a comment</string>
	<string name="message">Message</string>
	<string name="sent_from">Sent from</string>
	<string name="logout">Log out</string>
</resources>
